prefer homebrew bash completion over /etc/bash_completion

--- a/bash/config
+++ b/bash/config
@@ -13,9 +13,15 @@ shopt -s cdspell
 bind "set completion-ignore-case on" # note: bind used instead of sticking these in .inputrc
 bind "set bell-style none"
 bind "set show-all-if-ambiguous On"
+bind "set bell-style visible"
+bind "set match-hidden-files On"
+bind "set print-completions-horizontally On"
 
-# Turn on advanced bash completion if the file exists (get it here: http://www.caliban.org/bash/index.shtml#completion)
-if [ -f /etc/bash_completion ]; then
+# Bash completion from homebrew
+if [ -f `brew --prefix`/etc/bash_completion ]; then
+  . `brew --prefix`/etc/bash_completion
+elif [ -f /etc/bash_completion ]; then
+	# Alternatively, Turn on advanced bash completion if the file exists (get it here: http://www.caliban.org/bash/index.shtml#completion)
     . /etc/bash_completion
 fi
 
