disable functions since none used currently

--- a/zsh/config
+++ b/zsh/config
@@ -1,7 +1,7 @@
 # user functions
 fpath=(~/.zsh/functions $fpath)
 # autoload anything in the "functions" dir, with -U flag to prevent user aliases from interfering with the functions
-autoload -U ~/.zsh/functions/*(:t)
+#autoload -U ~/.zsh/functions/*(:t)
 
 autoload colors ; colors
 
