--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/bundle/ag"]
 	path = vim/bundle/ag
 	url = https://github.com/rking/ag.vim
+[submodule "vim/bundle/vim-yaml-helper"]
+	path = vim/bundle/vim-yaml-helper
+	url = https://github.com/lmeijvogel/vim-yaml-helper.git
