--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/bundle/vim-yaml-helper"]
 	path = vim/bundle/vim-yaml-helper
 	url = https://github.com/lmeijvogel/vim-yaml-helper.git
+[submodule "vim/bundle/elixir"]
+	path = vim/bundle/elixir
+	url = https://github.com/elixir-lang/vim-elixir.git
