--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,9 @@ setw -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
+# Paste
+bind-key ] paste-buffer
+
 # An escaped CTRL+A goes to beginning of line
 bind a send-prefix
 
