--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 # No window name changes unless I say so
 setw -g automatic-rename off
 
+# Auto reorder windows
+set-option -g renumber-windows on
+
 # Reload key
 bind r source-file ~/.tmux.conf
 
