Tmux swap window

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,10 @@ setw -g automatic-rename off
 # Auto reorder windows
 set-option -g renumber-windows on
 
+# Swap window makes more sense with auto reorder on
+unbind .
+bind . command-prompt -p "swap window to:"  "swap-window -t '%%'"
+
 # Reload key
 bind r source-file ~/.tmux.conf
 
