--- a/tmux.conf
+++ b/tmux.conf
@@ -75,3 +75,8 @@ setw -g window-status-current-bg black
 
 setw -g window-status-activity-fg white
 setw -g window-status-activity-bg black
+
+# mouse behavior
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
