--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,11 @@ set -g history-limit 300000 # basically infinite
 # Vi-style, thanks
 setw -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Paste
 bind-key ] paste-buffer
