Speed up escape key

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,9 @@ setw -g automatic-rename off
 # Auto reorder windows
 set-option -g renumber-windows on
 
+# Prevent escape key delay
+set -sg escape-time 0
+
 # Swap window makes more sense with auto reorder on
 unbind .
 bind . command-prompt -p "swap window to:"  "swap-window -t '%%'"
