Tighten up vertical spacing

--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -1285,7 +1285,7 @@
 			<key>Use Italic Font</key>
 			<false/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>0.89265727996826172</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
