--- a/tmux.conf
+++ b/tmux.conf
@@ -62,23 +62,37 @@ bind = resize-pane -Z
 bind-key < command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key > command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
-# Set status bar color
-set -g status-bg black
-set -g status-fg white
-set -g status-left ‘#[fg=green]#H’
-
 # backslash to go to last window
 bind \ last-window
 
-# Make the active pane slightly more visible
-set -g pane-border-bg default
-set -g pane-border-fg colour90
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour11
+#### COLOUR (Solarized 256)
 
-# Make the active window's name stand out
-setw -g window-status-current-fg brightblue
-setw -g window-status-current-bg black
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
-setw -g window-status-activity-fg white
-setw -g window-status-activity-bg black
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+# set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
