Unify split nav with vim-tmux-navigator
Change clear-screen shortcut to C-O

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,21 +38,9 @@ bind-key ] paste-buffer
 # An escaped CTRL+A goes to beginning of line
 bind a send-prefix
 
-# Vi movement between panes
-# used by iTerm via these shortcuts: http://tangledhelix.com/blog/2012/04/28/iterm2-keymaps-for-tmux/
-# NB: swap 0x02 for 0x01 if you want Ctrl-a
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# Pane splitting
 bind-key | split-window -h
 bind-key - split-window -v
-
-# Vi keys for resizing panes
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
 
 # Fullscreen and un-fullscreen a pane
 unbind =
@@ -61,6 +49,13 @@ bind = resize-pane -Z
 # Easily move panes between windows
 bind-key < command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key > command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# Smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # backslash to go to last window
 bind \ last-window
