Comment tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ bind r source-file ~/.tmux.conf
 set -g default-terminal "xterm-256color"
 set -g history-limit 300000 # basically infinite
 
-# Vi-style, thanks
+# Vi-style copying
 setw -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
