Ctrl-Z to foreground

--- a/zsh/config
+++ b/zsh/config
@@ -36,3 +36,17 @@ setopt HIST_VERIFY # don't execute history expansions directly
 bindkey '^[^[[D' backward-word # option-left
 bindkey '^[^[[C' forward-word # option-right
 bindkey '^[[3~' delete-char # forward delete key
+
+# Ctrl-Z to foreground!
+# http://sheerun.net/2014/03/21/how-to-boost-your-vim-productivity/
+fancy-ctrl-z () {
+  if [[ $#BUFFER -eq 0 ]]; then
+    fg
+    zle redisplay
+  else
+    zle push-input
+    zle clear-screen
+  fi
+}
+zle -N fancy-ctrl-z
+bindkey '^Z' fancy-ctrl-z
