Make C-A A work in nested screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,7 +36,7 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key ] paste-buffer
 
 # An escaped CTRL+A goes to beginning of line
-bind a send-prefix
+bind-key a send-prefix
 
 # Pane splitting
 bind-key | split-window -h
