Escaped Ctrl-k to cut line

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,9 @@ bind-key ] paste-buffer
 # An escaped CTRL+A goes to beginning of line
 bind-key a send-prefix
 
+# Escaped Ctrl-k to cut line
+bind-key k send-keys C-k
+
 # Pane splitting
 bind-key | split-window -h
 bind-key - split-window -v
