--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ bind . command-prompt -p "swap window to:"  "swap-window -t '%%'"
 # Reload key
 bind r source-file ~/.tmux.conf
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -g history-limit 300000 # basically infinite
 
 # Vi-style copying
