Disable paste time logic in new tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,9 @@ set-option -g renumber-windows on
 # Prevent escape key delay
 set -sg escape-time 0
 
+# Disable paste time logic that messes with iTerm "Send Key Codes" feature
+set-option -g assume-paste-time 0
+
 # Swap window makes more sense with auto reorder on
 unbind .
 bind . command-prompt -p "swap window to:"  "swap-window -t '%%'"
